# solidb

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Storage.md
include/: Database.h  SolidDB.h  Table.h
include/core/: Database.h  Table.h
include/parser/: CommandParser.h
include/util/: StringUtils.h
src/: Database.cpp  Table.cpp  main.cpp
src/core/: Database.cpp  Table.cpp
src/parser/: CommandParser.cpp
src/util/: StringUtils.cpp
